tests/NormalTests/paczka1/small_fuzzy/95928879.err
Error in line 1: V7zm A750 57,4
Error in line 5: Vl2I S870 43,5
Error in line 6: Vl2I S800 28,5
